--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">BlockPages</string>
+    <string name="general_ok">ok</string>
+    <string name="error_retry">Something went wrong. Please try again.</string>
+    <string name="error_not_found">Unable to find item.</string>
+    <string name="error_unknown">Uknown error, please consult tech department.</string>
 </resources>
